--- a/PaginaPrueba/index.html
+++ b/PaginaPrueba/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-    <h1 style="marign:100px auto;font-size: 10em;">Hola que hace</h1>
+    <div class="contenedor">
+        <h1>Hola que hace</h1>
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Rut</th>
+            </tr>
+        </table>
+
+    </div>
 </body>
 </html>
